client: Fix crash when calculating a relative path

Fix an if condition that resulted in trying to strdup(0x1).

https://bugzilla.gnome.org/show_bug.cgi?id=786217